[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyflowchart"
version = "0.6.0"
description = "Python codes to Flowcharts."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "CDFMLR", email = "cdfmlr@outlook.com" }]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]
dependencies = [
    "astunparse; python_version < '3.9'",
    "chardet",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/cdfmlr/pyflowchart"
"Bug Tracker" = "https://github.com/cdfmlr/pyflowchart/issues"

[project.scripts]
pyflowchart = "pyflowchart.__main__:cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["pyflowchart"]
python_files = ["test.py"]
